# Kmod

./: .gitignore  Cargo.toml  README.md  build.rs  setup.sh
.cargo/: config.toml
cppsrc/: cpp_main.cpp
cppsrc/include/: cpp_main.hpp
src/: cbinds.rs  main.rs
