[package]
name = "Kmod"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.94"
libc = "0.2.142"
libloading = "0.8.0"
sfml = "0.20.0"

# [dependencies.sfml]
# version = "0.20"

# [dependencies.sfml.env]
# SFML_INCLUDE_DIR = {value = "SFML/include", relative = true, force=true}

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"


# [env]
# # SFML_INCLUDE_DIR = "/home/aidenk/Desktop/_Kmod/SFML/include"
# SFML_INCLUDE_DIR = {value = "SFML/include", relative = true, force=true}
# SFML_LIBS_DIR = {value = "SFML/build/lib", relative = true, force=true}